[package]
name = "mavlink2zenoh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["derive"] }
env_logger = "0.10.1"
json5 = "0.4.1"
lazy_static = "1.4.0"
mavlink = { version = "0.12.2", features = [ "ardupilotmega"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.32", features = ["full"] }
tracing = "0.1.40"
zenoh = "0.10.0-rc"